--- a/Pipfile
+++ b/Pipfile
@@ -1,12 +1,20 @@
 [[source]]
+
 name = "pypi"
 url = "https://pypi.org/simple"
 verify_ssl = true
 
+
 [dev-packages]
 
+
+
 [packages]
+
 click = "*"
+requests = "*"
+
 
 [requires]
+
 python_version = "3.6"
